--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.orchid">
+    package="com.arkvis.orchid">
 
     <application
         android:allowBackup="true"
@@ -14,9 +14,8 @@
         android:theme="@style/Theme.Orchid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.arkvis.orchid.pcalender.view.PeriodCalendarView"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Orchid.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
