--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,14 @@ dependencies {
     implementation project(':app:orchid-main')
 
     //Core Dependencies
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation "io.insert-koin:koin-core:3.2.0"
 
     //Unit Test Dependencies
     testImplementation 'junit:junit:4.13.2'
