--- a/app/orchid-main/build.gradle
+++ b/app/orchid-main/build.gradle
@@ -1,15 +1,22 @@
 plugins {
-    id 'java'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
-group 'com.arkvis'
-version '1.0.0'
+group = 'org.example'
+version = '1.0-SNAPSHOT'
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
 test {
     useJUnitPlatform()
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = '1.8'
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = '1.8'
 }
